--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
             <button type="button" class="btn">Back call</button>
           </div>
         </header>
-        <h1 class="hero__title">your best choice for all <br> your roofing needs</h1>
+        <h1 class="hero__title">
+          your best choice for all <br />
+          your roofing needs
+        </h1>
         <p class="hero__text">
-          Whether you require repairs, replacements, or new <br> installations, our
-          team of skilled professionals is ready to exceed
+          Whether you require repairs, replacements, or new <br />
+          installations, our team of skilled professionals is ready to exceed
         </p>
         <form action="#" class="form">
           <div class="form__wrap">
@@ -85,20 +88,42 @@
               class="form__input"
               required
             />
-            
           </div>
           <div class="form-btn__wrap">
             <button type="button" class="btn">Back call</button>
           </div>
         </form>
         <button class="hero__btn">
-            <svg class="" width="20" height="20">
-                <use href="./images/icons.svg#icon-arrow-down"></use>
-              </svg>
+          <svg class="" width="20" height="20">
+            <use href="./images/icons.svg#icon-arrow-down"></use>
+          </svg>
         </button>
       </section>
       <section class="about container">
-        <h3 class="preTitle">about us</h3>
+        <div>
+          <h3 class="preTitle">about us</h3>
+          <h2 class="about__title">
+            Let's get to know <br />
+            each other better
+          </h2>
+        </div>
+        <div class="about__wrap">
+          <p class="about__text">
+            Welcome to Skyenergy, your premier choice for all your roofing
+            needs. With [number] years of industry experience, we are dedicated
+            to delivering exceptional quality and superior customer service.
+            Whether you require repairs, replacements, or new installations, our
+            team of skilled professionals is ready to exceed your expectations.
+          </p>
+          <p class="about__text-end">At Skyenergy, we understand that your roof is an integral part of your home or business.</p>
+          <div class="about__comit">
+            <img src="./images/about.jpg" alt="women" />
+            <div class="comit__wrap">
+              <h4 class="comit__title">Ava Orn</h4>
+              <p class="comit__text">founder of the company</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <script src="/js/index.js"></script>
