--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    // Add the new slick-theme.css if you want the default styling
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -115,7 +118,10 @@
             Whether you require repairs, replacements, or new installations, our
             team of skilled professionals is ready to exceed your expectations.
           </p>
-          <p class="about__text-end">At Skyenergy, we understand that your roof is an integral part of your home or business.</p>
+          <p class="about__text-end">
+            At Skyenergy, we understand that your roof is an integral part of
+            your home or business.
+          </p>
           <div class="about__comit">
             <img src="./images/about.jpg" alt="women" />
             <div class="comit__wrap">
@@ -125,7 +131,125 @@
           </div>
         </div>
       </section>
+      <section class="materials container">
+        <div class="materials__box">
+          <h3 class="preTitle">materials</h3>
+          <h1 class="materials__title">Modern roofing materials</h1>
+          <ul class="materials__list">
+            <li class="materials__item active">All</li>
+            <li class="materials__item">Tile</li>
+            <li class="materials__item">Attic windows</li>
+            <li class="materials__item">Insulator</li>
+            <li class="materials__item">Soffit</li>
+          </ul>
+          <div class="slider">
+            <ul class="slider__list">
+              <li class="slider__item">
+                <img
+                  src="./images/materials_1.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Tile</h5>
+                  <h4 class="slider__title">Metal</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/materials_2.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Tile</h5>
+                  <h4 class="slider__title">Bituminous</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/materials_3.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Tile</h5>
+                  <h4 class="slider__title">Composite</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/materials_4.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Tile</h5>
+                  <h4 class="slider__title">Ceramic</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="/js/index.js"></script>
   </body>
 </html>
