--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    // Add the new slick-theme.css if you want the default styling
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -143,7 +140,7 @@
             <li class="materials__item">Soffit</li>
           </ul>
           <div class="slider">
-            <ul class="slider__list">
+            <ul class="slider__list modern-paddig-slider">
               <li class="slider__item">
                 <img
                   src="./images/materials_1.jpg"
@@ -236,20 +233,160 @@
                   </div>
                 </div>
               </li>
+              <li class="slider__item">
+                <img
+                  src="./images/materials_1.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Tile</h5>
+                  <h4 class="slider__title">Metal</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
       </section>
+      <section class="work container">
+        <img src="./images/work.jpg" alt="work" width="100%">
+        <div class="work__box">
+          <h3 class="preTitle">our services</h3>
+          <h2 class="work__title">Roof installation work</h2>
+          <ul class="slider__list">
+              <li class="slider__item">
+                <img
+                  src="./images/work_1.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Installation</h5>
+                  <h4 class="slider__title">Metal tiles</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/work_2.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Installation</h5>
+                  <h4 class="slider__title">Metal tiles</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/work_3.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Installation</h5>
+                  <h4 class="slider__title">Metal tiles</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/work_4.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Installation</h5>
+                  <h4 class="slider__title">Metal tiles</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/work_1.jpg"
+                  alt="material"
+                  class="slider__img"
+                />
+                <div class="slider__content-box">
+                  <h5 class="slider__preTitle">Installation</h5>
+                  <h4 class="slider__title">Metal tiles</h4>
+                  <div class="slider__price-box">
+                    <div class="slider__price-container">
+                      <p class="slider__text">from</p>
+                      <p class="slider__price">202</p>
+                      <p class="slider__currency">₴</p>
+                    </div>
+                    <button type="button" class="slider__btn">
+                      <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+        </div>
+      </section>
     </main>
-    <script
-      type="text/javascript"
-      src="//code.jquery.com/jquery-1.11.0.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
-    ></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script type="text/javascript" src="./js/slick.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
