--- a/index.html
+++ b/index.html
@@ -261,127 +261,178 @@
         </div>
       </section>
       <section class="work container">
-        <img src="./images/work.jpg" alt="work" width="100%">
+        <img src="./images/work.jpg" alt="work" width="100%" />
         <div class="work__box">
           <h3 class="preTitle">our services</h3>
           <h2 class="work__title">Roof installation work</h2>
           <ul class="slider__list">
-              <li class="slider__item">
-                <img
-                  src="./images/work_1.jpg"
-                  alt="material"
-                  class="slider__img"
-                />
-                <div class="slider__content-box">
-                  <h5 class="slider__preTitle">Installation</h5>
-                  <h4 class="slider__title">Metal tiles</h4>
-                  <div class="slider__price-box">
-                    <div class="slider__price-container">
-                      <p class="slider__text">from</p>
-                      <p class="slider__price">202</p>
-                      <p class="slider__currency">₴</p>
-                    </div>
-                    <button type="button" class="slider__btn">
-                      <svg class="" width="24" height="24">
-                        <use href="./images/icons.svg#icon-plus"></use>
-                      </svg>
-                    </button>
+            <li class="slider__item">
+              <img
+                src="./images/work_1.jpg"
+                alt="material"
+                class="slider__img"
+              />
+              <div class="slider__content-box">
+                <h5 class="slider__preTitle">Installation</h5>
+                <h4 class="slider__title">Metal tiles</h4>
+                <div class="slider__price-box">
+                  <div class="slider__price-container">
+                    <p class="slider__text">from</p>
+                    <p class="slider__price">202</p>
+                    <p class="slider__currency">₴</p>
                   </div>
+                  <button type="button" class="slider__btn">
+                    <svg class="" width="24" height="24">
+                      <use href="./images/icons.svg#icon-plus"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </li>
+            <li class="slider__item">
+              <img
+                src="./images/work_2.jpg"
+                alt="material"
+                class="slider__img"
+              />
+              <div class="slider__content-box">
+                <h5 class="slider__preTitle">Installation</h5>
+                <h4 class="slider__title">Metal tiles</h4>
+                <div class="slider__price-box">
+                  <div class="slider__price-container">
+                    <p class="slider__text">from</p>
+                    <p class="slider__price">202</p>
+                    <p class="slider__currency">₴</p>
+                  </div>
+                  <button type="button" class="slider__btn">
+                    <svg class="" width="24" height="24">
+                      <use href="./images/icons.svg#icon-plus"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </li>
+            <li class="slider__item">
+              <img
+                src="./images/work_3.jpg"
+                alt="material"
+                class="slider__img"
+              />
+              <div class="slider__content-box">
+                <h5 class="slider__preTitle">Installation</h5>
+                <h4 class="slider__title">Metal tiles</h4>
+                <div class="slider__price-box">
+                  <div class="slider__price-container">
+                    <p class="slider__text">from</p>
+                    <p class="slider__price">202</p>
+                    <p class="slider__currency">₴</p>
+                  </div>
+                  <button type="button" class="slider__btn">
+                    <svg class="" width="24" height="24">
+                      <use href="./images/icons.svg#icon-plus"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </li>
+            <li class="slider__item">
+              <img
+                src="./images/work_4.jpg"
+                alt="material"
+                class="slider__img"
+              />
+              <div class="slider__content-box">
+                <h5 class="slider__preTitle">Installation</h5>
+                <h4 class="slider__title">Metal tiles</h4>
+                <div class="slider__price-box">
+                  <div class="slider__price-container">
+                    <p class="slider__text">from</p>
+                    <p class="slider__price">202</p>
+                    <p class="slider__currency">₴</p>
+                  </div>
+                  <button type="button" class="slider__btn">
+                    <svg class="" width="24" height="24">
+                      <use href="./images/icons.svg#icon-plus"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </li>
+            <li class="slider__item">
+              <img
+                src="./images/work_1.jpg"
+                alt="material"
+                class="slider__img"
+              />
+              <div class="slider__content-box">
+                <h5 class="slider__preTitle">Installation</h5>
+                <h4 class="slider__title">Metal tiles</h4>
+                <div class="slider__price-box">
+                  <div class="slider__price-container">
+                    <p class="slider__text">from</p>
+                    <p class="slider__price">202</p>
+                    <p class="slider__currency">₴</p>
+                  </div>
+                  <button type="button" class="slider__btn">
+                    <svg class="" width="24" height="24">
+                      <use href="./images/icons.svg#icon-plus"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="statistics container">
+        <h3 class="preTitle">statistics</h3>
+        <h2 class="statistics__title">About us in numbers</h2>
+        <p class="statistics__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
+          Nullam scelerisque aliquam odio et faucibus.
+        </p>
+        <div class="statistics__box">
+          <img
+            src="./images/statistics.jpg"
+            alt="work"
+            class="statistics__img"
+          />
+          <div class="statistics__content-box">
+            <ul class="statistics__list">
+              <li class="statistics__item statistics__content-active">
+                <p class="statistics__number">302 <span>+</span></p>
+                <div>
+                  <p class="statistics__content-title">Items per month</p>
+                  <p class="statistics__content-text">
+                    Lorem ipsum dolor sit amet, <br />
+                    consectetur adipiscing elit.
+                  </p>
                 </div>
               </li>
-              <li class="slider__item">
-                <img
-                  src="./images/work_2.jpg"
-                  alt="material"
-                  class="slider__img"
-                />
-                <div class="slider__content-box">
-                  <h5 class="slider__preTitle">Installation</h5>
-                  <h4 class="slider__title">Metal tiles</h4>
-                  <div class="slider__price-box">
-                    <div class="slider__price-container">
-                      <p class="slider__text">from</p>
-                      <p class="slider__price">202</p>
-                      <p class="slider__currency">₴</p>
-                    </div>
-                    <button type="button" class="slider__btn">
-                      <svg class="" width="24" height="24">
-                        <use href="./images/icons.svg#icon-plus"></use>
-                      </svg>
-                    </button>
-                  </div>
+              <li class="statistics__item">
+                <p class="statistics__number">25</p>
+                <div>
+                  <p class="statistics__content-title">Certificates</p>
+                  <p class="statistics__content-text">
+                    Lorem ipsum dolor sit amet, <br />
+                    consectetur adipiscing elit.
+                  </p>
                 </div>
               </li>
-              <li class="slider__item">
-                <img
-                  src="./images/work_3.jpg"
-                  alt="material"
-                  class="slider__img"
-                />
-                <div class="slider__content-box">
-                  <h5 class="slider__preTitle">Installation</h5>
-                  <h4 class="slider__title">Metal tiles</h4>
-                  <div class="slider__price-box">
-                    <div class="slider__price-container">
-                      <p class="slider__text">from</p>
-                      <p class="slider__price">202</p>
-                      <p class="slider__currency">₴</p>
-                    </div>
-                    <button type="button" class="slider__btn">
-                      <svg class="" width="24" height="24">
-                        <use href="./images/icons.svg#icon-plus"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-              </li>
-              <li class="slider__item">
-                <img
-                  src="./images/work_4.jpg"
-                  alt="material"
-                  class="slider__img"
-                />
-                <div class="slider__content-box">
-                  <h5 class="slider__preTitle">Installation</h5>
-                  <h4 class="slider__title">Metal tiles</h4>
-                  <div class="slider__price-box">
-                    <div class="slider__price-container">
-                      <p class="slider__text">from</p>
-                      <p class="slider__price">202</p>
-                      <p class="slider__currency">₴</p>
-                    </div>
-                    <button type="button" class="slider__btn">
-                      <svg class="" width="24" height="24">
-                        <use href="./images/icons.svg#icon-plus"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-              </li>
-              <li class="slider__item">
-                <img
-                  src="./images/work_1.jpg"
-                  alt="material"
-                  class="slider__img"
-                />
-                <div class="slider__content-box">
-                  <h5 class="slider__preTitle">Installation</h5>
-                  <h4 class="slider__title">Metal tiles</h4>
-                  <div class="slider__price-box">
-                    <div class="slider__price-container">
-                      <p class="slider__text">from</p>
-                      <p class="slider__price">202</p>
-                      <p class="slider__currency">₴</p>
-                    </div>
-                    <button type="button" class="slider__btn">
-                      <svg class="" width="24" height="24">
-                        <use href="./images/icons.svg#icon-plus"></use>
-                      </svg>
-                    </button>
-                  </div>
+              <li class="statistics__item">
+                <p class="statistics__number">510+</p>
+                <div>
+                  <p class="statistics__content-title">
+                    Addressed to the company
+                  </p>
+                  <p class="statistics__content-text">
+                    Lorem ipsum dolor sit amet, <br />
+                    consectetur adipiscing elit.
+                  </p>
                 </div>
               </li>
             </ul>
+          </div>
         </div>
       </section>
     </main>
