--- a/index.html
+++ b/index.html
@@ -385,6 +385,16 @@
         </div>
       </section>
       <section class="statistics container">
+        <img
+          src="./images/skyenergy.jpg"
+          alt="Skyenergy"
+          class="statistics__img-bg"
+        />
+        <img
+          src="./images/skyenergy-2.jpg"
+          alt="Skyenergy"
+          class="statistics__img-bg2"
+        />
         <h3 class="preTitle">statistics</h3>
         <h2 class="statistics__title">About us in numbers</h2>
         <p class="statistics__text">
@@ -434,6 +444,33 @@
             </ul>
           </div>
         </div>
+      </section>
+      <section class="gallery container">
+        <h3 class="preTitle">gallery</h3>
+        <h2 class="gallery__title">Our works in the gallery</h2>
+        <ul class="gallery__list">
+         <li class="gallery__item">
+          <div class="gallery__row">
+            <img src="./images/gallery_1.jpg" alt="work" class="gallery__img">
+            <img src="./images/gallery_4.jpg" alt="work" class="gallery__img">
+            <img src="./images/gallery_7.jpg" alt="work" class="gallery__img">
+          </div>
+         </li>
+         <li class="gallery__item">
+          <div class="gallery__row">
+            <img src="./images/gallery_2.jpg" alt="work" class="gallery__img">
+            <img src="./images/gallery_5.jpg" alt="work" class="gallery__img">
+          </div>
+         </li>
+          <li class="gallery__item">
+          <div class="gallery__row">
+            <img src="./images/gallery_3.jpg" alt="work" class="gallery__img">
+            <img src="./images/gallery_6.jpg" alt="work" class="gallery__img">
+            <img src="./images/gallery_8.jpg" alt="work" class="gallery__img">
+          </div>
+         </li>
+        </ul>
+        <button type="button" class="gallery_btn">watch more</button>
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
