--- a/index.html
+++ b/index.html
@@ -449,28 +449,186 @@
         <h3 class="preTitle">gallery</h3>
         <h2 class="gallery__title">Our works in the gallery</h2>
         <ul class="gallery__list">
-         <li class="gallery__item">
-          <div class="gallery__row">
-            <img src="./images/gallery_1.jpg" alt="work" class="gallery__img">
-            <img src="./images/gallery_4.jpg" alt="work" class="gallery__img">
-            <img src="./images/gallery_7.jpg" alt="work" class="gallery__img">
-          </div>
-         </li>
-         <li class="gallery__item">
-          <div class="gallery__row">
-            <img src="./images/gallery_2.jpg" alt="work" class="gallery__img">
-            <img src="./images/gallery_5.jpg" alt="work" class="gallery__img">
-          </div>
-         </li>
           <li class="gallery__item">
-          <div class="gallery__row">
-            <img src="./images/gallery_3.jpg" alt="work" class="gallery__img">
-            <img src="./images/gallery_6.jpg" alt="work" class="gallery__img">
-            <img src="./images/gallery_8.jpg" alt="work" class="gallery__img">
-          </div>
-         </li>
+            <div class="gallery__row">
+              <img
+                src="./images/gallery_1.jpg"
+                alt="work"
+                class="gallery__img"
+              />
+              <img
+                src="./images/gallery_4.jpg"
+                alt="work"
+                class="gallery__img"
+              />
+              <img
+                src="./images/gallery_7.jpg"
+                alt="work"
+                class="gallery__img"
+              />
+            </div>
+          </li>
+          <li class="gallery__item">
+            <div class="gallery__row">
+              <img
+                src="./images/gallery_2.jpg"
+                alt="work"
+                class="gallery__img"
+              />
+              <img
+                src="./images/gallery_5.jpg"
+                alt="work"
+                class="gallery__img"
+              />
+            </div>
+          </li>
+          <li class="gallery__item">
+            <div class="gallery__row">
+              <img
+                src="./images/gallery_3.jpg"
+                alt="work"
+                class="gallery__img"
+              />
+              <img
+                src="./images/gallery_6.jpg"
+                alt="work"
+                class="gallery__img"
+              />
+              <img
+                src="./images/gallery_8.jpg"
+                alt="work"
+                class="gallery__img"
+              />
+            </div>
+          </li>
         </ul>
         <button type="button" class="gallery_btn">watch more</button>
+      </section>
+      <section class="testimonials container">
+        <img src="./images/testi-bg.jpg" alt="bg" class="testimonials__img">
+        <div class="testimonials__box">
+          <h3 class="preTitle">Testimonials</h3>
+          <h2 class="testimonials__title">What our customers say</h2>
+          <ul class="testimonials__list">
+            <li class="testimonials__item">
+              <div class="testimonials__star-box">
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+              </div>
+              <h4 class="testimonials__item-title">We found the perfect home!</h4>
+              <p class="testimonials__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros elementum tristique. Duis
+                cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                commodo diam libero vitae erat. Aenean faucibus nibh et justo
+                cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
+                tristique posuere.
+              </p>
+              <p class="testimonials__avtor">Nate Davidsson</p>
+            </li>
+            <li class="testimonials__item">
+              <div class="testimonials__star-box">
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+              </div>
+              <h4 class="testimonials__item-title">We found the perfect home!</h4>
+              <p class="testimonials__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros elementum tristique. Duis
+                cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                commodo diam libero vitae erat. Aenean faucibus nibh et justo
+                cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
+                tristique posuere.
+              </p>
+              <p class="testimonials__avtor">Nate Davidsson</p>
+            </li>
+            <li class="testimonials__item">
+              <div class="testimonials__star-box">
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+              </div>
+              <h4 class="testimonials__item-title">We found the perfect home!</h4>
+              <p class="testimonials__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros elementum tristique. Duis
+                cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                commodo diam libero vitae erat. Aenean faucibus nibh et justo
+                cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
+                tristique posuere.
+              </p>
+              <p class="testimonials__avtor">Nate Davidsson</p>
+            </li>
+            <li class="testimonials__item">
+              <div class="testimonials__star-box">
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="" width="18" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+              </div>
+              <h4 class="testimonials__item-title">We found the perfect home!</h4>
+              <p class="testimonials__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros elementum tristique. Duis
+                cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                commodo diam libero vitae erat. Aenean faucibus nibh et justo
+                cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
+                tristique posuere.
+              </p>
+              <p class="testimonials__avtor">Nate Davidsson</p>
+            </li>
+            
+          </ul>
+        </div>
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
