--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         <button type="button" class="gallery_btn">watch more</button>
       </section>
       <section class="testimonials container">
-        <img src="./images/testi-bg.jpg" alt="bg" class="testimonials__img">
+        <img src="./images/testi-bg.jpg" alt="bg" class="testimonials__img" />
         <div class="testimonials__box">
           <h3 class="preTitle">Testimonials</h3>
           <h2 class="testimonials__title">What our customers say</h2>
@@ -528,7 +528,9 @@
                   <use href="./images/icons.svg#icon-star"></use>
                 </svg>
               </div>
-              <h4 class="testimonials__item-title">We found the perfect home!</h4>
+              <h4 class="testimonials__item-title">
+                We found the perfect home!
+              </h4>
               <p class="testimonials__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Suspendisse varius enim in eros elementum tristique. Duis
@@ -557,7 +559,9 @@
                   <use href="./images/icons.svg#icon-star"></use>
                 </svg>
               </div>
-              <h4 class="testimonials__item-title">We found the perfect home!</h4>
+              <h4 class="testimonials__item-title">
+                We found the perfect home!
+              </h4>
               <p class="testimonials__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Suspendisse varius enim in eros elementum tristique. Duis
@@ -586,7 +590,9 @@
                   <use href="./images/icons.svg#icon-star"></use>
                 </svg>
               </div>
-              <h4 class="testimonials__item-title">We found the perfect home!</h4>
+              <h4 class="testimonials__item-title">
+                We found the perfect home!
+              </h4>
               <p class="testimonials__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Suspendisse varius enim in eros elementum tristique. Duis
@@ -615,7 +621,9 @@
                   <use href="./images/icons.svg#icon-star"></use>
                 </svg>
               </div>
-              <h4 class="testimonials__item-title">We found the perfect home!</h4>
+              <h4 class="testimonials__item-title">
+                We found the perfect home!
+              </h4>
               <p class="testimonials__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Suspendisse varius enim in eros elementum tristique. Duis
@@ -626,11 +634,143 @@
               </p>
               <p class="testimonials__avtor">Nate Davidsson</p>
             </li>
-            
           </ul>
         </div>
       </section>
+      <section class="information container">
+        <div class="information__box">
+          <div class="information__adress-box">
+            <h4 class="information__adress-title">address</h4>
+            <p class="information__adress-text">
+              14 tottenham road, <br />
+              london, england
+            </p>
+          </div>
+          <div class="information__container">
+            <h4 class="information__title">information</h4>
+            <p class="information__mail">skyenergyclient@gmail.com</p>
+            <p class="information__num">05/9010 4640</p>
+          </div>
+        </div>
+        <div>
+          <form action="#">
+            <div class="information__form-box">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                placeholder="Your name*"
+                class="information__input"
+                required
+              />
+
+              <input
+                type="email"
+                id="user-email"
+                name="user-email"
+                placeholder="Your e-mail*"
+                class="information__input"
+                required
+              />
+            </div>
+            <div class="information__form-wrap">
+              <textarea
+                name="form-comment"
+                id="form-comment"
+                class="information__area"
+                placeholder="Your message*"
+                required
+              ></textarea>
+            </div>
+            <div class="information-btn__wrap">
+              <button type="submit" class="btn">Back call</button>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
+    <footer class="footer container">
+      <div class="footer__wraper">
+        <div class="footer__logo-box">
+          <svg class="logo" width="190" height="66">
+            <use href="./images/icons.svg#icon-footer-logo"></use>
+          </svg>
+          <p class="footer__logo-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+        <div class="footer__container">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <h3 class="footer__title-list">Services</h3>
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">Installation Metal tiles</a>
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">Installation Metal tiles</a>
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">Installation Metal tiles</a>
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">Installation Metal tiles</a>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <h3 class="footer__title-list">Page</h3>
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">Gallery</a>
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">Materials</a>
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">Testimonials</a>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <h3 class="footer__title-list">Follow Us</h3>
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">
+                <svg class="logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                <p>Facebook</p></a
+              >
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">
+                <svg class="logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-tiktok"></use>
+                </svg>
+                <p>Tik Tok</p></a
+              >
+            </li>
+            <li class="footer__item">
+              <a href="/" class="footer__link">
+                <svg class="logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                <p>Instagram</p></a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright__box">
+        <p>Copyright &#169; 2023</p>
+        <div class="copyright__wrap">
+          <p>Terms & Conditions</p>
+          <p>Privacy Policy</p>
+        </div>
+      </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script type="text/javascript" src="./js/slick.min.js"></script>
     <script src="./js/script.js"></script>
